2012-06-01  6.7.7-6 Cristy  <quetzlzacatenango@image...>
  * The -set colorspace option sets the colorspace, it does not transform it.
  * Assume grayscale images in the GIF format are linear.

2012-05-31  6.7.7-5 Cristy  <quetzlzacatenango@image...>
  * New version 6.7.7-5, SVN revision 8099.

2012-05-31  6.7.7-5 Cristy  <quetzlzacatenango@image...>
  * Set terminal character for GIF comment.

2012-05-30  6.7.7-4 Cristy  <quetzlzacatenango@image...>
  * New version 6.7.7-4, SVN revision 8096.

2012-05-30  6.7.7-4 Cristy  <quetzlzacatenango@image...>
  * 'convert 1-bit.tif -rotate 90 ...' returns a 1-bit TIFF image as expected.

2012-05-29  6.7.7-4 Glenn Randers-Pehrson <glennrp@image...>
  * Ignore APNG chunks even when libpng is built with the "APNG patch".

2012-05-29  6.7.7-3 Cristy  <quetzlzacatenango@image...>
  * New version 6.7.7-3, SVN revision 8089.

2012-05-28  6.7.7-3 Cristy  <quetzlzacatenango@image...>
  * Fix bug with stroke-dasharray (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=21090).
  * In rare cases, caption would not word-wrap properly (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=21106).
  * Don't set alpha pixels in SetImageVirtualPixelMethod() unless
    image area is well defined (i.e. != 0) (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?t=21110).

2012-05-27  6.7.7-3 Anthony Thyssen <A.Thyssen@griffith...>
  * Trialing the addition of new interpolation methods
      Average16         average of 16 pixels around sampling point
      Average9          9 pixels around nearest pixel
      Average4          Average of 4 pixels around sampling point
      Background        Background color (for resampling error checking)
      Blend             Blend of closest 1, 2 or 4 pixel neighbors
    NOTE: 'Average' is now equivelent to 'Average4',
    previous to this version it was equivelent to 'Average16'.