@@ -1,6 +1,8 @@
 2012-06-01  6.7.7-6 Cristy  <quetzlzacatenango@image...>
   * The -set colorspace option sets the colorspace, it does not transform it.
   * Assume grayscale images in the GIF format are linear.
+  * Add Nicolas Robidoux's bicubic interolation method (reference
+    http://www.imagemagick.org/discourse-server/viewtopic.php?f=2&t=21118).
 
 2012-05-31  6.7.7-5 Cristy  <quetzlzacatenango@image...>
   * New version 6.7.7-5, SVN revision 8099.
